# fixed-size-string-buffer

./: .clang-format  .clang-tidy  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  codecov.yaml
.github/workflows/: ci.yml  docs.yaml  docs.yml
bench/: CMakeLists.txt  bench_push.cpp
bench/source/: bench_push.cpp
bench/src/: bench_push.cpp
cmake/: CompilerSettings.cmake  CompilerWarnings.cmake  Conan.cmake  Coverage.cmake  Doxygen.cmake  Sanitizers.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake  common.cmake  tools.cmake  utils.mk
docs/: CMakeLists.txt  Doxyfile  conf.py
docs/pages/: about.dox
examples/: CMakeLists.txt
include/: FixedSizeStringBuffer.hpp  fixed_char_size_queue.h  fixed_elem_size_queue.h  fixed_size_queue.h  fixed_size_string_buffer.h  fixed_size_string_buffer.hpp
include/fssb/: fixed_char_size_queue.h  fixed_elem_size_queue.h  fixed_size_string_buffer.h
install/: CMakeLists.txt
single_include/: fixed_size_string_buffer.hpp
src/: FixedSizeStringBuffer.cpp  basic_example.cpp  main.cpp  symbols.cpp  unicode_example.cpp
src/fssb/: fixed_char_size_queue.cpp  fixed_elem_size_queue.cpp  fixed_size_string_buffer.cpp
standalone/: CMakeLists.txt
standalone/source/: basic_example.cpp  demo.cpp  main.cpp  unicode_example.cpp
standalone/src/: demo.cpp  unicode_example.cpp
test/: CMakeLists.txt  run_all.cpp  test_basic.cpp  test_compare.cpp
test/source/: test_basic.cpp  test_compare.cpp  test_stream.cpp
test/src/: fixed_size_string_buffer_test.cpp  test_basic.cpp  test_compare.cpp  test_stream.cpp
utils/: single_include.json
validate/: CMakeLists.txt
validate/source/: basic_example.cpp
